tests/resources/errors/errors19.ac
import std;
import std.Error;

struct TestError :: *Error {
    const fn get_name() -> const char* {
        return "TestError";
    }
    const fn get_message() -> const char* {
        return "error raised!";
    }
}

fn write_val(val: int8) {

#if OS_GROUP_WINDOWS
    handle: void* = std.GetStdHandle(-11);
    written: uint32;
    c: char = as(char) val;
    std.WriteFile(handle, &c, 1, &written, null);
#elif OS_GROUP_UNIX
    c: char = as(char) val;
    std.write(1, &c, 1);
#endif

}

struct A {
    v: int8;
}

fn foo(cond: bool) -> A | raises TestError {
    if cond {
        return A{ 64 };
    }

    raise TestError{};
}

fn main() {
    f: fn(bool) -> A | raises TestError = foo;
    a: A = try f(true);
    write_val(a.v);
    try f(false);
}